--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <title>INSURE</title>
-</head>
-<body>
-    <header></header>
-    <main></main>
-    <footer>Hecho con <span>❤</span> por Front 8</footer>
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header__nav">
+        <figure class="header__logo"></figure>
+        <ul class="header__list">
+          <li class="header__item"><a href="">HOW WE WORK</a></li>
+          <li class="header__item"><a href="">BLOG</a></li>
+          <li class="header__item"><a href="">ACCOUNT</a></li>
+          <li class="header__item"><button href="">VIEW PLANS</button></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main"></main>
+    <footer class="footer">Hecho con <span>❤</span> por Front 8</footer>
+  </body>
 </html>
