Se terminó el CRUD con la petición Delete y Update al json-server.

--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
       </section>
       <section>
         <h2>Reprogramar cita</h2>
-        <form id="update-appointment-id">
+        <form id="update-appointment-form">
           <input
-            type="number"
+            type="text"
             id="update-appointment-id"
             placeholder="id de la cita"
             required
